--- a/application/templates/add_task.html
+++ b/application/templates/add_task.html
@@ -4,7 +4,7 @@
 
 <h1>Add task</h1>
 
-<form action="" method="post">
+<form action="" method="POST">
     {{ form.hidden_tag() }}
     <p>
         {{ form.task.label }}<br>
